--- a/vue/project/intadmin/package.json
+++ b/vue/project/intadmin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.7.2",
+    "unplugin-element-plus": "^0.8.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
